vv reset server/gateway log message
