# vv/testdata/api/gen/dummy.pb.go
@@ -406,41 +406,46 @@ var file_dummy_proto_rawDesc = []byte{
 	0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x76, 0x6e, 0x64, 0x2e, 0x6f, 0x70, 0x65, 0x6e,
 	0x78, 0x6d, 0x6c, 0x66, 0x6f, 0x72, 0x6d, 0x61, 0x74, 0x73, 0x2d, 0x6f, 0x66, 0x66, 0x69, 0x63,
 	0x65, 0x64, 0x6f, 0x63, 0x75, 0x6d, 0x65, 0x6e, 0x74, 0x2e, 0x73, 0x70, 0x72, 0x65, 0x61, 0x64,
-	0x73, 0x68, 0x65, 0x65, 0x74, 0x6d, 0x6c, 0x2e, 0x73, 0x68, 0x65, 0x65, 0x74, 0x32, 0x85, 0x04,
-	0x0a, 0x0c, 0x44, 0x75, 0x6d, 0x6d, 0x79, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x67,
-	0x0a, 0x04, 0x45, 0x63, 0x68, 0x6f, 0x12, 0x0e, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45,
-	0x63, 0x68, 0x6f, 0x52, 0x65, 0x71, 0x1a, 0x0f, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45,
-	0x63, 0x68, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x22, 0x3e, 0xa2, 0xb0, 0x24, 0x27, 0x0a, 0x09, 0x64,
-	0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f,
-	0x73, 0x69, 0x67, 0x6e, 0x1a, 0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x69, 0x70, 0x6c, 0x69,
-	0x73, 0x74, 0x20, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x12, 0x0b, 0x2f, 0x64, 0x75, 0x6d,
-	0x6d, 0x79, 0x2f, 0x65, 0x63, 0x68, 0x6f, 0x12, 0x76, 0x0a, 0x0a, 0x53, 0x74, 0x72, 0x65, 0x61,
-	0x6d, 0x45, 0x63, 0x68, 0x6f, 0x12, 0x0e, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45, 0x63,
-	0x68, 0x6f, 0x52, 0x65, 0x71, 0x1a, 0x0f, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45, 0x63,
-	0x68, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x22, 0x45, 0xa2, 0xb0, 0x24, 0x27, 0x0a, 0x09, 0x64, 0x75,
-	0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73,
-	0x69, 0x67, 0x6e, 0x1a, 0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x69, 0x70, 0x6c, 0x69, 0x73,
-	0x74, 0x20, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x12, 0x12, 0x2f, 0x64, 0x75, 0x6d, 0x6d,
-	0x79, 0x2f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2f, 0x65, 0x63, 0x68, 0x6f, 0x30, 0x01, 0x12,
-	0x80, 0x01, 0x0a, 0x06, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x12, 0x10, 0x2e, 0x64, 0x75, 0x6d,
-	0x6d, 0x79, 0x2e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x52, 0x65, 0x71, 0x1a, 0x11, 0x2e, 0x64,
-	0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x52, 0x65, 0x73, 0x70, 0x22,
-	0x51, 0xa2, 0xb0, 0x24, 0x27, 0x0a, 0x09, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x73, 0x6f,
-	0x12, 0x0a, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x69, 0x67, 0x6e, 0x1a, 0x0c, 0x64, 0x75,
-	0x6d, 0x6d, 0x79, 0x5f, 0x69, 0x70, 0x6c, 0x69, 0x73, 0x74, 0x20, 0x00, 0x82, 0xd3, 0xe4, 0x93,
-	0x02, 0x20, 0x22, 0x19, 0x2f, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2f, 0x75, 0x70, 0x6c, 0x6f, 0x61,
-	0x64, 0x2f, 0x7b, 0x66, 0x69, 0x6c, 0x65, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x7d, 0x3a, 0x03, 0x72,
-	0x61, 0x77, 0x12, 0x48, 0x0a, 0x07, 0x50, 0x69, 0x63, 0x74, 0x75, 0x72, 0x65, 0x12, 0x11, 0x2e,
-	0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x50, 0x69, 0x63, 0x74, 0x75, 0x72, 0x65, 0x52, 0x65, 0x71,
-	0x1a, 0x12, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x50, 0x69, 0x63, 0x74, 0x75, 0x72, 0x65,
-	0x52, 0x65, 0x73, 0x70, 0x22, 0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x10, 0x12, 0x0e, 0x2f, 0x64,
-	0x75, 0x6d, 0x6d, 0x79, 0x2f, 0x70, 0x69, 0x63, 0x74, 0x75, 0x72, 0x65, 0x12, 0x47, 0x0a, 0x05,
-	0x45, 0x78, 0x63, 0x65, 0x6c, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x10, 0x2e,
-	0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45, 0x78, 0x63, 0x65, 0x6c, 0x52, 0x65, 0x73, 0x70, 0x22,
-	0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x12, 0x0c, 0x2f, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2f,
-	0x65, 0x78, 0x63, 0x65, 0x6c, 0x42, 0x0a, 0x5a, 0x08, 0x2e, 0x2f, 0x3b, 0x64, 0x75, 0x6d, 0x6d,
-	0x79, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x73, 0x68, 0x65, 0x65, 0x74, 0x6d, 0x6c, 0x2e, 0x73, 0x68, 0x65, 0x65, 0x74, 0x32, 0xd8, 0x04,
+	0x0a, 0x0c, 0x44, 0x75, 0x6d, 0x6d, 0x79, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x51,
+	0x0a, 0x04, 0x50, 0x69, 0x6e, 0x67, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x16,
+	0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66,
+	0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x19, 0xa2, 0xb0, 0x24, 0x02, 0x20, 0x01, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x0d, 0x12, 0x0b, 0x2f, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2f, 0x70, 0x69, 0x6e,
+	0x67, 0x12, 0x67, 0x0a, 0x04, 0x45, 0x63, 0x68, 0x6f, 0x12, 0x0e, 0x2e, 0x64, 0x75, 0x6d, 0x6d,
+	0x79, 0x2e, 0x45, 0x63, 0x68, 0x6f, 0x52, 0x65, 0x71, 0x1a, 0x0f, 0x2e, 0x64, 0x75, 0x6d, 0x6d,
+	0x79, 0x2e, 0x45, 0x63, 0x68, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x22, 0x3e, 0xa2, 0xb0, 0x24, 0x27,
+	0x0a, 0x09, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75, 0x6d,
+	0x6d, 0x79, 0x5f, 0x73, 0x69, 0x67, 0x6e, 0x1a, 0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x69,
+	0x70, 0x6c, 0x69, 0x73, 0x74, 0x20, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x12, 0x0b, 0x2f,
+	0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2f, 0x65, 0x63, 0x68, 0x6f, 0x12, 0x76, 0x0a, 0x0a, 0x53, 0x74,
+	0x72, 0x65, 0x61, 0x6d, 0x45, 0x63, 0x68, 0x6f, 0x12, 0x0e, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79,
+	0x2e, 0x45, 0x63, 0x68, 0x6f, 0x52, 0x65, 0x71, 0x1a, 0x0f, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79,
+	0x2e, 0x45, 0x63, 0x68, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x22, 0x45, 0xa2, 0xb0, 0x24, 0x27, 0x0a,
+	0x09, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75, 0x6d, 0x6d,
+	0x79, 0x5f, 0x73, 0x69, 0x67, 0x6e, 0x1a, 0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x69, 0x70,
+	0x6c, 0x69, 0x73, 0x74, 0x20, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x12, 0x12, 0x2f, 0x64,
+	0x75, 0x6d, 0x6d, 0x79, 0x2f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2f, 0x65, 0x63, 0x68, 0x6f,
+	0x30, 0x01, 0x12, 0x80, 0x01, 0x0a, 0x06, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x12, 0x10, 0x2e,
+	0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x52, 0x65, 0x71, 0x1a,
+	0x11, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x52, 0x65,
+	0x73, 0x70, 0x22, 0x51, 0xa2, 0xb0, 0x24, 0x27, 0x0a, 0x09, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f,
+	0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x69, 0x67, 0x6e, 0x1a,
+	0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x69, 0x70, 0x6c, 0x69, 0x73, 0x74, 0x20, 0x00, 0x82,
+	0xd3, 0xe4, 0x93, 0x02, 0x20, 0x22, 0x19, 0x2f, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2f, 0x75, 0x70,
+	0x6c, 0x6f, 0x61, 0x64, 0x2f, 0x7b, 0x66, 0x69, 0x6c, 0x65, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x7d,
+	0x3a, 0x03, 0x72, 0x61, 0x77, 0x12, 0x48, 0x0a, 0x07, 0x50, 0x69, 0x63, 0x74, 0x75, 0x72, 0x65,
+	0x12, 0x11, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x50, 0x69, 0x63, 0x74, 0x75, 0x72, 0x65,
+	0x52, 0x65, 0x71, 0x1a, 0x12, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x50, 0x69, 0x63, 0x74,
+	0x75, 0x72, 0x65, 0x52, 0x65, 0x73, 0x70, 0x22, 0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x10, 0x12,
+	0x0e, 0x2f, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2f, 0x70, 0x69, 0x63, 0x74, 0x75, 0x72, 0x65, 0x12,
+	0x47, 0x0a, 0x05, 0x45, 0x78, 0x63, 0x65, 0x6c, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c,
+	0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79,
+	0x1a, 0x10, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45, 0x78, 0x63, 0x65, 0x6c, 0x52, 0x65,
+	0x73, 0x70, 0x22, 0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x12, 0x0c, 0x2f, 0x64, 0x75, 0x6d,
+	0x6d, 0x79, 0x2f, 0x65, 0x78, 0x63, 0x65, 0x6c, 0x42, 0x0a, 0x5a, 0x08, 0x2e, 0x2f, 0x3b, 0x64,
+	0x75, 0x6d, 0x6d, 0x79, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -467,18 +472,20 @@ var file_dummy_proto_goTypes = []interface{}{
 	(*emptypb.Empty)(nil), // 7: google.protobuf.Empty
 }
 var file_dummy_proto_depIdxs = []int32{
-	0, // 0: dummy.DummyService.Echo:input_type -> dummy.EchoReq
-	0, // 1: dummy.DummyService.StreamEcho:input_type -> dummy.EchoReq
-	2, // 2: dummy.DummyService.Upload:input_type -> dummy.UploadReq
-	4, // 3: dummy.DummyService.Picture:input_type -> dummy.PictureReq
-	7, // 4: dummy.DummyService.Excel:input_type -> google.protobuf.Empty
-	1, // 5: dummy.DummyService.Echo:output_type -> dummy.EchoResp
-	1, // 6: dummy.DummyService.StreamEcho:output_type -> dummy.EchoResp
-	3, // 7: dummy.DummyService.Upload:output_type -> dummy.UploadResp
-	5, // 8: dummy.DummyService.Picture:output_type -> dummy.PictureResp
-	6, // 9: dummy.DummyService.Excel:output_type -> dummy.ExcelResp
-	5, // [5:10] is the sub-list for method output_type
-	0, // [0:5] is the sub-list for method input_type
+	7, // 0: dummy.DummyService.Ping:input_type -> google.protobuf.Empty
+	0, // 1: dummy.DummyService.Echo:input_type -> dummy.EchoReq
+	0, // 2: dummy.DummyService.StreamEcho:input_type -> dummy.EchoReq
+	2, // 3: dummy.DummyService.Upload:input_type -> dummy.UploadReq
+	4, // 4: dummy.DummyService.Picture:input_type -> dummy.PictureReq
+	7, // 5: dummy.DummyService.Excel:input_type -> google.protobuf.Empty
+	7, // 6: dummy.DummyService.Ping:output_type -> google.protobuf.Empty
+	1, // 7: dummy.DummyService.Echo:output_type -> dummy.EchoResp
+	1, // 8: dummy.DummyService.StreamEcho:output_type -> dummy.EchoResp
+	3, // 9: dummy.DummyService.Upload:output_type -> dummy.UploadResp
+	5, // 10: dummy.DummyService.Picture:output_type -> dummy.PictureResp
+	6, // 11: dummy.DummyService.Excel:output_type -> dummy.ExcelResp
+	6, // [6:12] is the sub-list for method output_type
+	0, // [0:6] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
